# meshmend

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  package.json  plan.md
.codex/environments/: environment.toml
.github/workflows/: ci.yml  macos-release.disabled.yml  release.yml
apps/meshmend/: Cargo.toml  README.md  index.html  package-lock.json  package.json
apps/meshmend/scripts/: generate_icons.py  verify_viewer.mjs
apps/meshmend/src/: app.rs  commands.rs  control.rs  icons.rs  input.rs  main.rs  main.ts  render_script.rs  scenario.rs  session.rs  styles.css
apps/meshmend/src-tauri/: Cargo.toml  tauri.conf.json
apps/meshmend/src-tauri/icons/: icon.icns
apps/meshmend/src-tauri/src/: main.rs
apps/meshmend/src/viewer/: createScene.ts  fitCamera.ts  loadStl.ts  stats.ts
archive/python-resinmesh/: pyproject.toml  requirements.txt
archive/python-resinmesh/research/: mesh_repair_research.md
archive/python-resinmesh/src/resinmesh/: __init__.py  cli.py  core.py  diagnostics.py  experiments.py  roi.py  roi_3d_ui.py  roi_ui.py  voxel.py
archive/python-resinmesh/tests/: test_diagnostics.py
crates/meshmend-analysis/: Cargo.toml
crates/meshmend-analysis/src/: lib.rs
crates/meshmend-core/: Cargo.toml
crates/meshmend-core/src/: bounds.rs  inspection.rs  lib.rs  mesh.rs  units.rs
crates/meshmend-geometry/: Cargo.toml
crates/meshmend-geometry/src/: lib.rs
crates/meshmend-inspection/: Cargo.toml
crates/meshmend-inspection/src/: lib.rs
crates/meshmend-io/: Cargo.toml
crates/meshmend-io/src/: lib.rs
crates/meshmend-notes/: Cargo.toml
crates/meshmend-notes/src/: lib.rs
crates/meshmend-project/: Cargo.toml
crates/meshmend-project/src/: lib.rs
crates/meshmend-render/: Cargo.toml
crates/meshmend-render/src/: buffers.rs  camera.rs  lib.rs  renderer.rs
crates/meshmend-render/src/shaders/: grid.wgsl  mesh.wgsl  picking.wgsl
crates/meshmend-stl/: Cargo.toml
crates/meshmend-stl/src/: lib.rs
crates/meshmend-worker-api/: Cargo.toml
crates/meshmend-worker-api/src/: lib.rs
docs/: command-scenarios.md  cross-section-inspection-plan.md  meshmend-master-plan.md  meshmend-native-wgpu-master-plan.md  tauri-stl-viewer-plan.md
docs/architecture/: inspection-and-defects.md  inspection-and-issues.md  local-heal.md  performance-report.md  performance.md  release.md  renderer.md  selection-and-notes.md  stl-loading.md  troubleshooting.md  verification.md  workers.md
fixtures/stl/: cube_binary.stl  cube_missing_top.stl  invalid_count.stl  malformed_header.stl  open_hole_binary.stl
scripts/: generate_icons.py  package-macos.sh  run-meshmend.sh
tests/scenarios/: cube-selection-camera.json  cube-two-cuts.json  cube-view-line-cut.json
workers/cpp/: CMakeLists.txt
workers/cpp/src/: meshmend_cgal_worker.cpp  meshmend_openvdb_worker.cpp  worker_common.hpp
