[workspace]
resolver = "2"
members = [
  "apps/meshmend",
  "crates/meshmend-analysis",
  "crates/meshmend-core",
  "crates/meshmend-geometry",
  "crates/meshmend-io",
  "crates/meshmend-inspection",
  "crates/meshmend-project",
  "crates/meshmend-render",
  "crates/meshmend-stl",
  "crates/meshmend-worker-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/szymon/meshmend"

[workspace.dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
glam = { version = "0.28", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }
memmap2 = "0.9"
pollster = "0.3"
rayon = "1.10"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
wgpu = "0.19"
winit = "0.29"

[profile.release]
lto = "thin"
codegen-units = 1
