[package]
name = "meshmend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
glam.workspace = true
meshmend-analysis = { path = "../../crates/meshmend-analysis" }
meshmend-core = { path = "../../crates/meshmend-core" }
meshmend-geometry = { path = "../../crates/meshmend-geometry" }
meshmend-io = { path = "../../crates/meshmend-io" }
meshmend-project = { path = "../../crates/meshmend-project" }
meshmend-render = { path = "../../crates/meshmend-render" }
meshmend-stl = { path = "../../crates/meshmend-stl" }
meshmend-worker-api = { path = "../../crates/meshmend-worker-api" }
pollster.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
winit.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
muda.workspace = true
