[project]
name = "resinmesh"
version = "0.1.0"
description = "Adaptive resin-print mesh simplification tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.3",
    "manifold3d>=3.4.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "open3d>=0.19.0",
    "pillow>=12.2.0",
    "pymeshlab==2025.7.post1",
    "rich>=14.2.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "trimesh[easy]>=4.12.2",
    "typer>=0.20.0",
]

[project.scripts]
resinmesh = "resinmesh.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
