[package]
name = "meshmend-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
glam.workspace = true
meshmend-core = { path = "../meshmend-core" }
meshmend-geometry = { path = "../meshmend-geometry" }
serde.workspace = true
serde_json.workspace = true
