[package]
name = "meshmend-project"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
glam.workspace = true
meshmend-core = { path = "../meshmend-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
