[package]
name = "meshmend-stl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
glam.workspace = true
memmap2.workspace = true
meshmend-core = { path = "../meshmend-core" }
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true
